@@ -7,7 +7,6 @@ Create the browser object we'll be using.
 
     >>> from Products.Five.testbrowser import Browser
     >>> browser = Browser()
-    >>> browser.handleErrors = False
     >>> browser.open(self.portal.absolute_url())
     >>> 'Welcome to Plone' in browser.contents
     True
@@ -24,12 +23,6 @@ address book in checkout
      >>> browser.getControl('Password').value = 'secret'
      >>> browser.getControl('Log in').click()
 
-     >>> self.portal.portal_quickinstaller.installProduct('PloneGetPaid')
-     'Installing Dependencies\n'
-     >>> self.portal.portal_quickinstaller.installProduct('PloneFormGen')
-     "Installing PloneFormGen\nInstalled types\nAdded all my types to portal_factory\nInstalled skin\nAdded form fields & adapters to types_not_searched\nAdded form fields & adapters to metaTypesNotToList\nSet up empty field and adapter workflows.\nAdded FormFolder to default_page_types\nAdded FormFolder to kupu's linkable types\nAdded PloneFormGen Tool\nAdded PloneFormGen properysheet\nAdded configlet PloneFormGen\nAdded ploneformgen.kss to kss registry\nSuccessfully installed PloneFormGen.\n"
-     >>> self.portal.portal_quickinstaller.installProduct('getpaid.formgen')
-     u'Installing dependency products\nInstalling GetpaidPFGAdapter\nInstalled types and added to portal_factory via portal_setup\nAdding GetpaidPFGAdapter to Form Field allowed_content_types\nAdded form fields & adapters to types_not_searched\nAdded form fields & adapters to metaTypesNotToList\nSuccessfully installed getpaid.formgen.\n'
      >>> browser.getLink('Home').click()
  
 Setting required settings. (Especially anonymous checkout)
@@ -54,10 +47,6 @@ Setting required settings. (Especially anonymous checkout)
     >>> browser.getControl(name="form.allow_authorization").displayValue = ['allow_authorization']
     >>> browser.getControl(name="form.allow_capture").displayValue = ['allow_capture']
     >>> browser.getControl(name="form.allow_refunds").displayValue = ['allow_refund']    
-    >>> browser.getControl('Apply').click()
-    >>> browser.getLink('GetPaid').click()
-    >>> browser.getLink('Email Notifications').click()
-    >>> browser.getControl(name='form.merchant_email_notification').displayValue = ['Do not send merchant email notification of a completed transaction']
     >>> browser.getControl('Apply').click()
     >>> browser.getLink('GetPaid').click()
     >>> browser.getLink('Legal Disclaimers').click()
@@ -96,7 +85,11 @@ Add a PFG folder
     >>> browser.getLink('Form Folder').click()
     >>> browser.getControl('Title').value = 'somepfgform'
     >>> browser.getControl('Mailer').selected = False
-    >>> browser.getControl('None').selected = True
+    >>> browser.getControl('Save').click()
+
+Add a field to give the quantity to purchase.
+    >>> browser.getLink('Whole Number Field').click()
+    >>> browser.getControl('Field Label').value = 'quantity'
     >>> browser.getControl('Save').click()
 
 Lets remove the rest of the fields we are not interested in
@@ -106,39 +99,45 @@ Lets remove the rest of the fields we are not interested in
     >>> browser.getControl('Your E-Mail Address').selected = True
     >>> browser.getControl('Subject').selected = True
     >>> browser.getControl('Comments').selected = True
-    >>> browser.getControl('Thank You').selected = True
     >>> browser.getControl('Delete').click()
 
-Lets add the getpaid adapter with One Page Checkout method
+Lets add the getpaid adapter with One Page Checkout method.
 
     >>> browser.getLink('Getpaid Adapter').click()
     >>> browser.getControl('Title').value = 'agetpaidadapter'
-    >>> browser.getControl('One Page Checkout').getControl(value='One Page Checkout').selected = True
-    >>> browser.getControl('GPMakePaymentButton').value = 'Make Payment button'
+    >>> browser.getControl('One Page Checkout').selected = True
+    >>> browser.getControl(name='payablesMap.payable_path:records', index=0).value = ['/plone/front-page']
+    >>> browser.getControl('Get Paid Payment Button Label').value = 'Make Payment button'
     >>> browser.getControl('Save').click()
 
 Let's check that our personal button name works
 
     >>> 'Make Payment button' in browser.contents
+    True
 
 Let's do a checkout
 
+    >>> browser.getControl('quantity').value = '1'
+    >>> browser.getControl('Your Full Name').value = 'Harvey Frank'
+    >>> browser.getControl('Email').value = 'test@example.com'
     >>> browser.getControl('Phone Number').value = '555555555'
-    >>> browser.getControl('Zip/Postal Code').value = '5000'
-    >>> browser.getControl('City').value = 'Cordoba'
+    >>> browser.getControl('Zip/Postal Code').value = '98101'
+    >>> browser.getControl('City').value = 'Seattle'
+    >>> browser.getControl('State').value = 'WA'
+    >>> browser.getControl('Country').value = 'USA'
     >>> browser.getControl('Address 1').value = 'address'
     >>> browser.getControl('Card Holder Name').value = 'Card holder dude'
-    >>> browser.getControl('Credit Card Verfication Number').value = '123'
-    >>> browser.getControl(name='cc_expiration_year').value = '2011'
-    >>> browser.getControl(name='cc_expiration_month').value = '08'
-    >>> browser.getControl(name='cc_expiration_day').value = '15'
+    >>> browser.getControl('Credit Card Verification Number').value = '123'
+    >>> browser.getControl(name='cc_expiration_year').value = ['2011']
+    >>> browser.getControl(name='cc_expiration_month').value = ['08']
+    >>> browser.getControl(name='cc_expiration_day').value = ['15']
+    >>> browser.getControl(name='credit_card_type').value = ['Visa']
     >>> browser.getControl('Credit Card Number').value = '104'
     >>> browser.getControl('Make Payment button').click()
 
 And now, lets see if it is polite and thanks us
     
-    >>> 'Thank you' in browser.contents
-
-
+    >>> 'Thanks for your input' in browser.contents
+    True
 
 Finished verification.
