@@ -5,6 +5,14 @@ CHANGES
 0.4 (unreleased)
 ----------------
 
+- If a one-page checkout succeeds, show the form's thank you page rather
+  than the GetPaid thank you message.
+  [davisagli]
+
+- Allow custom PloneFormGen fields to supply their own line item fields
+  by registering a (cart, field) adapter to ILineItemFactory.
+  [davisagli]
+
 - Don't require DataGridField <= 1.8a1; that doesn't work on Plone 4.
   [davisagli]
 
